Actualizacion de Proyecto | Cambios: se elimino la clase Employees Data y se agrego nuevos metodos para la eliminacion de datos entitadades | notas: CRUD al 75% al completar el CRUD replicar metodos para Desarrollar logica para demas entidades